WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249800
[CSS-Typed-OM] `transition-duration` property shouldn't allow negative values
https://bugs.webkit.org/show_bug.cgi?id=249800
Summary
[CSS-Typed-OM] `transition-duration` property shouldn't allow negative values
Chris Dumez
Reported
2022-12-22 13:05:03 PST
`transition-duration` property shouldn't allow negative values, as per: -
https://w3c.github.io/csswg-drafts/css-transitions/#transition-duration-property
This means that StylePropertyMap.set() should wrap the value in a `calc()` when negative, and that the computed value should be clamped to [0, inf].
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-12-22 13:06:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8016
EWS
Comment 2
2022-12-22 17:14:45 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 3
2022-12-23 09:43:24 PST
Committed
258295@main
(ab21f8049d34): <
https://commits.webkit.org/258295@main
> Reviewed commits have been landed. Closing PR #8016 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-12-23 09:44:16 PST
<
rdar://problem/103672274
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug