[CSS-Typed-OM] `transition-duration` property shouldn't allow negative values https://bugs.webkit.org/show_bug.cgi?id=249800

Reviewed by Simon Fraser.

`transition-duration` property shouldn't allow negative values, as per:
- https://w3c.github.io/csswg-drafts/css-transitions/#transition-duration-property

This means that StylePropertyMap.set() should wrap the value in a `calc()` when
negative, and that the computed value should be clamped to [0, inf].

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/transition-duration-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/transition-duration.html:
* Source/WebCore/css/typedom/CSSUnitValue.cpp:
(WebCore::isValueOutOfRangeForProperty):

Canonical link: https://commits.webkit.org/258295@main